0029841: Test cases from tools/dfbrowser periodically hang on Windows platform

Do not start new thread if the thread has been already started. Restart the thread after the previous has finished.